Added ability to disable smoothing with a boolean in AugmentedReality class